@@ -81,6 +81,8 @@ available.
   <li><a href="mailto:reti@ai.mit.edu">Kalman Reti</a>
   <li><a href="mailto:Alberto.Riva@TCH.Harvard.edu">Alberto Riva</a>
   <li><a href="mailto:rschlatte@ist.tu-graz.ac.at">Rudi Schlatte</a>
+  <li>Paul Tarvydas
+  <li>Kenny Tilton
   <li><a href="mailto:rurban@x-ray.at">Reini Urban</a>
   <li><a href="mailto:matthieu@matthieu-villeneuve.net">Matthieu Villeneuve</a>
   <li><a href="mailto:edi@agharta.de">Edi Weitz</a>
@@ -115,6 +117,6 @@ available.
 <hr>
 <a href="license.html">Copyright</a> &copy; 2002 The Common Lisp Cookbook Project
 <address>http://cl-cookbook.sourceforge.net/</address>
-<br>$Header: /cvsroot/cl-cookbook/cl-cookbook/index.html,v 1.21 2002/12/26 01:17:24 nhabedi Exp $
+<br>$Header: /cvsroot/cl-cookbook/cl-cookbook/index.html,v 1.22 2003/03/11 05:21:11 jdcal Exp $
 </body> </html>
 
